force-app/main/default/objects/eSign_Request__c/eSign_Request__c.object-meta.xml
<CustomObject>
    <label>eSign Request</label>
    <nameField>
        <label>eSign Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eSign Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>