force-app/main/default/objects/eSign_Request__c/fields/Envelope_name__c.field-meta.xml
<CustomField>
    <fullName>Envelope_name__c</fullName>
    <label>Envelope name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>