force-app/main/default/objects/eSign_Request__c/fields/Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_On__c</fullName>
    <label>Sent On</label>
    <type>Date</type>
</CustomField>