force-app/main/default/objects/eSign_Request__c/fields/Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Sent_to__c</fullName>
    <label>Sent to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>