force-app/main/default/objects/eSign_Request__c/fields/Signing_Status__c.field-meta.xml
<CustomField>
    <fullName>Signing_Status__c</fullName>
    <label>Signing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Not Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>