force-app/main/default/objects/eSign_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sent_to__c</columns>
    <columns>Signing_Status__c</columns>
    <columns>Sent_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>